--- a/public/assets/styles/style-dark.css
+++ b/public/assets/styles/style-dark.css
@@ -240,36 +240,37 @@ select option,
   }
 }
 
-.nav__item a {
+.nav__item div {
   background-color: #2E2F36;
   color: #AEB0B8;
+  cursor: pointer;
 }
-.nav__item a:hover {
+.nav__item div:hover {
   color: #0D86FF;
 }
 @media only screen and (max-width: 580px) {
-  .nav__item a {
+  .nav__item div {
     background-color: transparent;
   }
 }
-.nav__item a.active {
+.nav__item div.active {
   background-image: linear-gradient(142.17deg, #0DA2FF 6.66%, #0055FF 91.48%);
   box-shadow: inset -4px -4px 5px rgba(0, 0, 0, 0.2), inset 4px 4px 5px rgba(255, 255, 255, 0.23);
   color: #FCFCFC;
 }
-.nav__item a.active:hover {
+.nav__item div.active:hover {
   color: #FCFCFC;
 }
 @media only screen and (max-width: 580px) {
-  .nav__item a.active {
+  .nav__item div.active {
     background-image: none;
     box-shadow: none;
     color: #0D86FF;
   }
-  .nav__item a.active:hover {
+  .nav__item div.active:hover {
     color: #0D86FF;
   }
-  .nav__item a.active::before {
+  .nav__item div.active::before {
     background-color: #0D86FF;
   }
 }
