Update About, Resume information

--- a/public/assets/styles/style-dark.css
+++ b/public/assets/styles/style-dark.css
@@ -19,165 +19,176 @@
     - General Styles
 ----------------------------------------------------------------- */
 body {
-  background: #1D1E24;
-  color: #AEB0B8;
+  background: #1d1e24;
+  color: #aeb0b8;
 }
 
 .bg-triangles {
-  background-color: #1D1E24;
-  background-image: url(../images/triangles-top.svg), url(../images/triangles-bottom.svg);
+  background-color: #1d1e24;
+  background-image: url(../images/triangles-top.svg),
+    url(../images/triangles-bottom.svg);
 }
 
 /* -----------------------------------------------------------------
     - Typography
 ----------------------------------------------------------------- */
-h1, h2, h3, h4, h5, h6 {
-  color: #FCFCFC;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #fcfcfc;
 }
 
 .title__separate::before {
-  background-color: #0D86FF;
+  background-color: #0d86ff;
 }
 
 .overhead {
-  color: #AEB0B8;
+  color: #aeb0b8;
 }
 
 .block-quote::before {
   background-image: url(../icons/icon-quote-dark.svg);
 }
 .block-quote__author::before {
-  background-color: #AEB0B8;
+  background-color: #aeb0b8;
 }
 
 iframe {
-  background-color: #5E6E80;
+  background-color: #5e6e80;
 }
 
 /* -----------------------------------------------------------------
     - Form
 ----------------------------------------------------------------- */
-.form-control, .textarea, select,
+.form-control,
+.textarea,
+select,
 .custom-select {
-  background-color: #2E2F36;
-  border-color: #2E2F36;
-  color: #AEB0B8;
+  background-color: #2e2f36;
+  border-color: #2e2f36;
+  color: #aeb0b8;
 }
 
-.form-control:focus, .textarea:focus, select:focus,
+.form-control:focus,
+.textarea:focus,
+select:focus,
 .custom-select:focus {
-  background-color: #23262B;
-  border-color: #33363D;
-  color: #AEB0B8;
+  background-color: #23262b;
+  border-color: #33363d;
+  color: #aeb0b8;
 }
 
 .form-group .font-icon {
-  color: #AEB0B8;
+  color: #aeb0b8;
 }
 
 .form-control::-webkit-input-placeholder {
-  color: #93959C;
+  color: #93959c;
 }
 
 .form-control::-moz-placeholder {
-  color: #93959C;
+  color: #93959c;
 }
 
 .form-control:-ms-input-placeholder {
-  color: #93959C;
+  color: #93959c;
 }
 
 .form-control::-ms-input-placeholder {
-  color: #93959C;
+  color: #93959c;
 }
 
 .form-control::placeholder {
-  color: #93959C;
+  color: #93959c;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
   box-shadow: 0 0 0 0.2rem rgba(13, 134, 255, 0.25);
 }
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #0D86FF;
+  border-color: #0d86ff;
 }
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   border-color: #fff;
 }
 .custom-control-input:checked ~ .custom-control-label::before {
-  border-color: #0D86FF;
-  background-color: #0D86FF;
+  border-color: #0d86ff;
+  background-color: #0d86ff;
 }
 
 .custom-control-label::before {
-  border-color: #AEB0B8;
+  border-color: #aeb0b8;
 }
 
 select option,
 .custom-select option {
-  color: #AEB0B8;
+  color: #aeb0b8;
 }
 
 .dropdown-menu {
-  background-color: #33363D;
+  background-color: #33363d;
   box-shadow: 0 0.5rem 2.5rem rgba(0, 0, 0, 0.5);
-  color: #AEB0B8;
+  color: #aeb0b8;
 }
 .dropdown-menu::before {
-  border-top: 0.375rem solid #33363D;
+  border-top: 0.375rem solid #33363d;
 }
 .dropdown.dropup .dropdown-menu::before {
-  border-top: 0.375rem solid #33363D;
+  border-top: 0.375rem solid #33363d;
 }
 
 .tooltip-inner {
-  background-color: #AEB0B8;
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.25), 0 0.125rem 1rem rgba(0, 0, 0, 0.5);
+  background-color: #aeb0b8;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.25),
+    0 0.125rem 1rem rgba(0, 0, 0, 0.5);
 }
 
 .bs-tooltip-top .arrow::before,
 .bs-tooltip-auto[x-placement^="top"] .arrow::before {
-  border-top-color: #AEB0B8;
+  border-top-color: #aeb0b8;
 }
 
 .bs-tooltip-right .arrow::before,
 .bs-tooltip-auto[x-placement^="right"] .arrow::before {
-  border-right-color: #AEB0B8;
+  border-right-color: #aeb0b8;
 }
 
 .bs-tooltip-left .arrow::before,
 .bs-tooltip-auto[x-placement^="left"] .arrow::before {
-  border-left-color: #AEB0B8;
+  border-left-color: #aeb0b8;
 }
 
 .bs-tooltip-bottom .arrow::before,
 .bs-tooltip-auto[x-placement^="bottom"] .arrow::before {
-  border-bottom-color: #AEB0B8;
+  border-bottom-color: #aeb0b8;
 }
 
 .btn {
-  background-image: linear-gradient(142.17deg, #0DA2FF 6.66%, #0055FF 91.48%);
-  color: #FCFCFC;
+  background-image: linear-gradient(142.17deg, #0da2ff 6.66%, #0055ff 91.48%);
+  color: #fcfcfc;
 }
 .btn:hover {
-  color: #FCFCFC;
+  color: #fcfcfc;
 }
 
 /* -----------------------------------------------------------------
     - Preloader
 ----------------------------------------------------------------- */
 .preloader {
-  background-color: #1D1E24;
+  background-color: #1d1e24;
 }
 .preloader__progress {
-  background: #1D1E24;
+  background: #1d1e24;
 }
 .preloader__progress span {
-  background: #0D86FF;
+  background: #0d86ff;
 }
 
 .circle-pulse__1 {
-  background-color: #0D86FF;
+  background-color: #0d86ff;
 }
 
 .circle-pulse__2 {
@@ -188,42 +199,42 @@ select option,
     - Header
 ----------------------------------------------------------------- */
 .header__left::before {
-  background-color: #33363D;
+  background-color: #33363d;
 }
 .header__photo {
-  background-color: #23262B;
-  border-color: #23262B;
+  background-color: #23262b;
+  border-color: #23262b;
 }
 .header__social a {
-  color: #93959C;
+  color: #93959c;
 }
 .header__social a:hover {
-  color: #0D86FF;
+  color: #0d86ff;
 }
 .header__contact {
-  color: #FCFCFC;
+  color: #fcfcfc;
 }
 
 /* -----------------------------------------------------------------
     - Sections
 ----------------------------------------------------------------- */
 .box {
-  background-color: #23262B;
+  background-color: #23262b;
   box-shadow: -4px 8px 24px rgba(0, 0, 0, 0.07);
 }
 .box__border {
-  border-color: #33363D;
+  border-color: #33363d;
 }
 
 .social__link {
-  color: #FCFCFC;
+  color: #fcfcfc;
 }
 
 /* -----------------------------------------------------------------
     - Cases
 ----------------------------------------------------------------- */
 .case-item {
-  border-color: #33363D;
+  border-color: #33363d;
 }
 
 /* -----------------------------------------------------------------
@@ -231,7 +242,7 @@ select option,
 ----------------------------------------------------------------- */
 @media only screen and (max-width: 991px) {
   .sidebar {
-    border-color: #33363D;
+    border-color: #33363d;
   }
 }
 @media only screen and (max-width: 580px) {
@@ -241,12 +252,12 @@ select option,
 }
 
 .nav__item div {
-  background-color: #2E2F36;
-  color: #AEB0B8;
+  background-color: #2e2f36;
+  color: #aeb0b8;
   cursor: pointer;
 }
 .nav__item div:hover {
-  color: #0D86FF;
+  color: #0d86ff;
 }
 @media only screen and (max-width: 580px) {
   .nav__item div {
@@ -254,24 +265,25 @@ select option,
   }
 }
 .nav__item div.active {
-  background-image: linear-gradient(142.17deg, #0DA2FF 6.66%, #0055FF 91.48%);
-  box-shadow: inset -4px -4px 5px rgba(0, 0, 0, 0.2), inset 4px 4px 5px rgba(255, 255, 255, 0.23);
-  color: #FCFCFC;
+  background-image: linear-gradient(142.17deg, #0da2ff 6.66%, #0055ff 91.48%);
+  box-shadow: inset -4px -4px 5px rgba(0, 0, 0, 0.2),
+    inset 4px 4px 5px rgba(255, 255, 255, 0.23);
+  color: #fcfcfc;
 }
 .nav__item div.active:hover {
-  color: #FCFCFC;
+  color: #fcfcfc;
 }
 @media only screen and (max-width: 580px) {
   .nav__item div.active {
     background-image: none;
     box-shadow: none;
-    color: #0D86FF;
+    color: #0d86ff;
   }
   .nav__item div.active:hover {
-    color: #0D86FF;
+    color: #0d86ff;
   }
   .nav__item div.active::before {
-    background-color: #0D86FF;
+    background-color: #0d86ff;
   }
 }
 
@@ -279,34 +291,34 @@ select option,
     - Footer
 ----------------------------------------------------------------- */
 .footer {
-  color: #93959C;
+  color: #93959c;
 }
 
 /* -----------------------------------------------------------------
     - Single post
 ----------------------------------------------------------------- */
 .footer-post::before {
-  background-color: #AEB0B8;
+  background-color: #aeb0b8;
 }
 .footer-post__share {
-  color: #FCFCFC;
+  color: #fcfcfc;
 }
 
 .comment-box__inner {
-  background-color: #2E2F36;
+  background-color: #2e2f36;
 }
 .comment-box__details {
-  color: #FCFCFC;
+  color: #fcfcfc;
 }
 .comment-box__footer {
-  color: #FCFCFC;
+  color: #fcfcfc;
 }
 .comment-box__footer li:hover {
-  color: #0D86FF;
+  color: #0d86ff;
 }
 
 .comment-form .icon-smile:hover {
-  color: #0D86FF;
+  color: #0d86ff;
 }
 
 .emoji-wrap .emoji:hover {
@@ -314,33 +326,33 @@ select option,
 }
 
 .scroll-line {
-  background: #0D86FF;
+  background: #0d86ff;
 }
 
 .nicescroll-cursors {
-  background-color: #93959C !important;
+  background-color: #93959c !important;
 }
 
 .social-auth__link {
-  color: #FCFCFC;
+  color: #fcfcfc;
 }
 .social-auth__link:hover {
-  color: #FCFCFC;
+  color: #fcfcfc;
 }
 
 /* -----------------------------------------------------------------
     - Testimonials
 ----------------------------------------------------------------- */
 .review-item {
-  background-color: #1D1E24;
+  background-color: #1d1e24;
   background-image: url(../icons/icon-quote-dark.svg);
 }
 
 .swiper-pagination-bullet {
-  background: #33363D;
+  background: #33363d;
 }
 .swiper-pagination-bullet-active {
-  background: #0D86FF;
+  background: #0d86ff;
 }
 
 /* -----------------------------------------------------------------
@@ -348,54 +360,54 @@ select option,
 ----------------------------------------------------------------- */
 @media only screen and (min-width: 769px) {
   .filter__item::before {
-    background-color: #AEB0B8;
+    background-color: #aeb0b8;
   }
   .filter__item a {
     color: rgba(174, 176, 184, 0.8);
   }
   .filter__item.active a {
-    color: #FCFCFC;
+    color: #fcfcfc;
   }
 }
 @media only screen and (max-width: 768px) {
   .select {
-    background-color: #2E2F36;
+    background-color: #2e2f36;
   }
   .select ul {
-    background-color: #2E2F36;
+    background-color: #2e2f36;
     box-shadow: 0 0.625rem 3.75rem rgba(0, 0, 0, 0.5);
   }
   .select ul li {
-    color: #AEB0B8;
+    color: #aeb0b8;
   }
   .select ul li:hover {
-    background-color: #0D86FF;
+    background-color: #0d86ff;
   }
   .select ul li:hover a {
-    color: #FCFCFC;
+    color: #fcfcfc;
   }
   .select ul li a {
-    color: #AEB0B8;
+    color: #aeb0b8;
   }
 }
 /* -----------------------------------------------------------------
     - News
 ----------------------------------------------------------------- */
 .news-item {
-  background-color: #2E2F36;
+  background-color: #2e2f36;
 }
 .news-item__date {
-  color: #FCFCFC;
+  color: #fcfcfc;
 }
 
 /* -----------------------------------------------------------------
     - Timeline
 ----------------------------------------------------------------- */
 .timeline__item {
-  border-color: #33363D;
+  border-color: #33363d;
 }
 .timeline__item::before {
-  background-color: #0D86FF;
+  background-color: #0d86ff;
   box-shadow: 0 0 0 0.1875rem rgba(13, 134, 255, 0.25);
 }
 .timeline__period {
@@ -404,22 +416,22 @@ select option,
 
 /* Progress  */
 .progress {
-  background-color: #2E2F36;
+  background-color: #2e2f36;
 }
 .progress-bar {
-  background-image: linear-gradient(142.17deg, #0DA2FF 6.66%, #0055FF 91.48%);
+  background-image: linear-gradient(142.17deg, #0da2ff 6.66%, #0055ff 91.48%);
 }
 
 /* -----------------------------------------------------------------
     - Other
 ----------------------------------------------------------------- */
 .back-to-top {
-  border-top: 1px solid #FCFCFC;
-  border-left: 1px solid #FCFCFC;
+  border-top: 1px solid #fcfcfc;
+  border-left: 1px solid #fcfcfc;
 }
 
 .medium-zoom-overlay {
-  background: #1D1E24 !important;
+  background: #1d1e24 !important;
 }
 
 /*# sourceMappingURL=style-dark.css.map */
