--- a/public/assets/icons/style.css
+++ b/public/assets/icons/style.css
@@ -1,16 +1,15 @@
 @font-face {
-  font-family: 'icomoon';
-  src:
-    url('icomoon.woff') format('woff'),
-    url('icomoon.woff2') format('woff2');
+  font-family: "icomoon";
+  src: url("icomoon.woff") format("woff"), url("icomoon.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"],
+[class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
+  font-family: "icomoon" !important;
   speak: never;
   font-style: normal;
   font-weight: normal;
