--- a/public/assets/styles/style-rtl.css
+++ b/public/assets/styles/style-rtl.css
@@ -4,7 +4,7 @@
  Template Name: 
  version: 1.0.0
 ------------------------------------------------ */
-@import url("./css2.css");
+@import url('./css2.css');
 /* -----------------------------------------------------------------
     - General Styles
 ----------------------------------------------------------------- */
