--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -34,7 +34,7 @@
 @import url(vendors/bootstrap.min.css);
 @import url(vendors/swiper.min.css);
 @import url(../icons/style.css);
-@import url("./css2.css");
+@import url('./css2.css');
 
 /* -----------------------------------------------------------------
     - General Styles
@@ -64,7 +64,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   color: #5e6e80;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: 400;
   font-size: 0.875rem;
   line-height: 1.7;
@@ -128,7 +128,7 @@ h4,
 h5,
 h6 {
   color: #3b4b5e;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: 600;
   line-height: 1.3;
 }
@@ -205,7 +205,7 @@ h6 {
 }
 .title__separate::before,
 .title__separate::after {
-  content: "";
+  content: '';
   background-color: #304cfd;
   border-radius: 0.5rem;
   height: 5px;
@@ -279,7 +279,7 @@ h6 {
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  content: "";
+  content: '';
   height: 2.125rem;
   margin: 0 auto;
   position: absolute;
@@ -313,7 +313,7 @@ h6 {
   }
 }
 .block-quote__author::before {
-  content: "";
+  content: '';
   background-color: #5e6e80;
   height: 1px;
   margin-bottom: auto;
@@ -366,7 +366,7 @@ iframe {
   border-radius: 0.375rem;
   object-fit: cover;
   object-position: center;
-  font-family: "object-fit: cover; object-position: center;";
+  font-family: 'object-fit: cover; object-position: center;';
   height: 100%;
   width: 100%;
 }
@@ -575,7 +575,7 @@ select option,
   font-size: 0.9375rem;
 }
 .dropdown-menu::before {
-  content: "";
+  content: '';
   border-left: 0.375rem solid transparent;
   border-right: 0.375rem solid transparent;
   border-bottom: 0.375rem solid #fff;
@@ -607,25 +607,25 @@ select option,
 }
 
 .bs-tooltip-top .arrow::before,
-.bs-tooltip-auto[x-placement^="top"] .arrow::before {
+.bs-tooltip-auto[x-placement^='top'] .arrow::before {
   border-width: 0.3125rem 0.3125rem 0;
   border-top-color: #5e6e80;
 }
 
 .bs-tooltip-right .arrow::before,
-.bs-tooltip-auto[x-placement^="right"] .arrow::before {
+.bs-tooltip-auto[x-placement^='right'] .arrow::before {
   border-width: 0.3125rem 0.3125rem 0.3125rem 0;
   border-right-color: #5e6e80;
 }
 
 .bs-tooltip-left .arrow::before,
-.bs-tooltip-auto[x-placement^="left"] .arrow::before {
+.bs-tooltip-auto[x-placement^='left'] .arrow::before {
   border-width: 0.3125rem 0 0.3125rem 0.3125rem;
   border-left-color: #5e6e80;
 }
 
 .bs-tooltip-bottom .arrow::before,
-.bs-tooltip-auto[x-placement^="bottom"] .arrow::before {
+.bs-tooltip-auto[x-placement^='bottom'] .arrow::before {
   border-width: 0 0.3125rem 0.3125rem;
   border-bottom-color: #5e6e80;
 }
@@ -794,7 +794,7 @@ button:focus {
   min-width: 0;
 }
 .header__left::before {
-  content: "";
+  content: '';
   background-color: #ebf0f2;
   position: absolute;
   top: 0;
@@ -998,7 +998,7 @@ button:focus {
 .overlay::before,
 .overlay--45::before,
 .overlay--80::before {
-  content: "";
+  content: '';
   background-color: rgba(46, 47, 54, 0.8);
   position: absolute;
   top: 0;
@@ -1238,7 +1238,7 @@ button:focus {
     color: #304cfd;
   }
   .nav__item div.active::before {
-    content: "";
+    content: '';
     background-color: #304cfd;
     height: 0.125rem;
     position: absolute;
@@ -1247,25 +1247,25 @@ button:focus {
     width: 100%;
   }
 }
-.nav__item [class^="icon-"] {
+.nav__item [class^='icon-'] {
   display: block;
   font-size: 2.25rem;
   margin-top: 0.25rem;
   margin-bottom: 0.5rem;
 }
 @media only screen and (max-width: 1200px) {
-  .nav__item [class^="icon-"] {
+  .nav__item [class^='icon-'] {
     font-size: 1.75rem;
     margin-bottom: 0.25rem;
   }
 }
 @media only screen and (max-width: 768px) {
-  .nav__item [class^="icon-"] {
+  .nav__item [class^='icon-'] {
     font-size: 1.5rem;
   }
 }
 @media only screen and (max-width: 580px) {
-  .nav__item [class^="icon-"] {
+  .nav__item [class^='icon-'] {
     font-size: 1.0625rem;
     margin-top: 0.375rem;
   }
@@ -1405,7 +1405,7 @@ button:focus {
 }
 
 #marker {
-  background-image: url("../images/icon-map-pic.svg");
+  background-image: url('../images/icon-map-pic.svg');
   background-size: cover;
   width: 3.125rem;
   height: 3.125rem;
@@ -1509,7 +1509,7 @@ button:focus {
     position: relative;
   }
   .filter__item::before {
-    content: "";
+    content: '';
     background-color: #5e6e80;
     border-radius: 0.1875rem;
     position: absolute;
@@ -1577,12 +1577,12 @@ button:focus {
     top: 50%;
     right: 2px;
     transform: translateY(-50%);
-    font-family: "icomoon";
-    content: "\e940";
+    font-family: 'icomoon';
+    content: '\e940';
     z-index: 10;
   }
   .select.is-open .placeholder:after {
-    content: "\e943";
+    content: '\e943';
   }
   .select.is-open ul {
     display: block;
@@ -1695,7 +1695,7 @@ button:focus {
   transition: opacity 0.5s ease-in-out;
 }
 .news-item__image-wrap::after {
-  content: "";
+  content: '';
   background-image: url(../icons/icon-news.svg);
   height: 2.5rem;
   margin: auto;
@@ -1868,7 +1868,7 @@ button:focus {
   }
 }
 .footer-post::before {
-  content: "";
+  content: '';
   background-color: #3b4b5e;
   height: 1px;
   margin: auto;
@@ -2323,7 +2323,7 @@ button:focus {
   position: relative;
 }
 .timeline__item::before {
-  content: "";
+  content: '';
   background-color: #304cfd;
   box-shadow: 0 0 0 0.1875rem rgba(48, 76, 253, 0.25);
   border-radius: 50%;
@@ -2470,7 +2470,7 @@ button:focus {
 }
 .js-parallax-img .jarallax-img {
   object-fit: cover;
-  font-family: "object-fit: cover;";
+  font-family: 'object-fit: cover;';
   position: absolute;
   top: 0;
   left: 0;
